<resources>
    <string name="app_name">storage</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hello_again">Hello Again!</string>
    <string name="register">Register</string>
    <string name="right_arrow">-></string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot password</string>
    <string name="submit">Submit</string>
</resources>