<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:fitsSystemWindows="true"
    android:gravity="bottom|center"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="50dp"
    android:windowTranslucentNavigation="true"
    android:windowTranslucentStatus="true"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/dancing_script_bold"
            android:gravity="center"
            android:text="@string/hello_again"
            android:textColor="@color/white"
            android:textSize="50sp" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="100dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldEmail"
        style="@style/TextInput.Layout.Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        app:boxStrokeErrorColor="@color/white"
        app:endIconMode="clear_text"
        app:errorIconTint="@color/white"
        app:errorTextColor="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldPassword"
        style="@style/TextInput.Layout.Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        app:boxStrokeErrorColor="@color/white"
        app:endIconMode="password_toggle"
        app:errorIconTint="@color/white"
        app:errorTextColor="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <RelativeLayout
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_default"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/btnLoginText"
                style="@style/Button.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textFontWeight="900"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/btnLoginProgress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/right_arrow"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>